--- a/app/src/main/res/layout/activity_map1_page.xml
+++ b/app/src/main/res/layout/activity_map1_page.xml
@@ -61,12 +61,11 @@
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="71dp"
-            android:layout_height="72dp"
+            android:layout_width="63dp"
+            android:layout_height="65dp"
             app:layout_column="0"
-            app:layout_row="0"
-            app:srcCompat="@drawable/icons8-bee-top-view-100"
-            android:contentDescription="@string/bee" />
+            app:layout_row="1"
+            app:srcCompat="@drawable/icons8-bee-top-view-100" />
     </androidx.gridlayout.widget.GridLayout>
 
     <LinearLayout
