--- a/app/src/main/res/layout/activity_map1_page.xml
+++ b/app/src/main/res/layout/activity_map1_page.xml
@@ -10,7 +10,7 @@
 
 
     <Button
-        android:id="@+id/button12"
+        android:id="@+id/settings"
         android:layout_width="45dp"
         android:layout_height="45dp"
         android:layout_marginEnd="24dp"
@@ -21,18 +21,18 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button13"
+        android:id="@+id/volume"
         android:layout_width="45dp"
         android:layout_height="45dp"
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
         android:background="@drawable/volumeon"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
-        app:layout_constraintEnd_toStartOf="@+id/button12"
+        app:layout_constraintEnd_toStartOf="@+id/settings"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button15"
+        android:id="@+id/back"
         android:layout_width="45dp"
         android:layout_height="45dp"
         android:layout_marginStart="16dp"
@@ -60,12 +60,23 @@
         app:layout_constraintVertical_bias="1.0">
 
         <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="63dp"
-            android:layout_height="65dp"
+            android:id="@+id/bee"
+            android:layout_width="75dp"
+            android:layout_height="70dp"
+            android:contentDescription="@string/bee"
             app:layout_column="0"
-            app:layout_row="1"
-            app:srcCompat="@drawable/icons8-bee-top-view-100" />
+            app:layout_row="2"
+            android:rotation="90"
+            app:srcCompat="@drawable/bee" />
+
+        <ImageView
+            android:id="@+id/honey"
+            android:layout_width="75dp"
+            android:layout_height="70dp"
+            app:layout_column="2"
+            app:layout_row="0"
+            app:srcCompat="@drawable/honeycombs"
+            android:contentDescription="@string/honeycomb" />
     </androidx.gridlayout.widget.GridLayout>
 
     <LinearLayout
@@ -102,9 +113,7 @@
             android:id="@+id/goForward"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableRight="@drawable/icons8-up-100"
-            android:text="@string/go_forward"
-            android:drawableEnd="@drawable/icons8-up-100" />
+            android:text="@string/goForward" />
 
         <Button
             android:id="@+id/turnRight"
@@ -115,21 +124,21 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/turnLeft"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/turnLeft" />
     </LinearLayout>
 
     <Button
-        android:id="@+id/button14"
+        android:id="@+id/info"
         android:layout_width="45dp"
         android:layout_height="45dp"
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
         android:background="@drawable/info"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
-        app:layout_constraintEnd_toStartOf="@+id/button13"
+        app:layout_constraintEnd_toStartOf="@+id/volume"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
