--- a/app/src/main/res/layout/activity_settings_page.xml
+++ b/app/src/main/res/layout/activity_settings_page.xml
@@ -59,11 +59,12 @@
         android:id="@+id/musics_button_SettingPage"
         android:layout_width="167dp"
         android:layout_height="92dp"
-        android:layout_marginStart="120dp"
-        android:layout_marginLeft="120dp"
-        android:layout_marginTop="123dp"
-        android:layout_marginEnd="124dp"
-        android:layout_marginRight="124dp"
+        android:layout_marginStart="282dp"
+        android:layout_marginLeft="282dp"
+        android:layout_marginTop="41dp"
+        android:background="@drawable/wallpaper8"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/themes_button_settingsPage" />
         android:layout_marginBottom="256dp"
         android:background="@drawable/wallpaper8"
         android:text="@string/musics_button"
@@ -74,5 +75,5 @@
         app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/themes_button_settingsPage"
-        app:layout_constraintVertical_bias="0.287" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
