--- a/app/src/main/res/layout/activity_map1_page.xml
+++ b/app/src/main/res/layout/activity_map1_page.xml
@@ -64,10 +64,10 @@
             android:id="@+id/imageView2"
             android:layout_width="71dp"
             android:layout_height="72dp"
+            android:contentDescription="@string/bee"
             app:layout_column="0"
             app:layout_row="0"
-            app:srcCompat="@drawable/icons8-bee-top-view-100"
-            android:contentDescription="@string/bee" />
+            app:srcCompat="@drawable/joker" />
     </androidx.gridlayout.widget.GridLayout>
 
     <LinearLayout
@@ -104,9 +104,8 @@
             android:id="@+id/goForward"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableRight="@drawable/icons8-up-100"
             android:text="@string/go_forward"
-            android:drawableEnd="@drawable/icons8-up-100" />
+             />
 
         <Button
             android:id="@+id/turnRight"
