--- a/app/src/main/res/layout/activity_settings_page.xml
+++ b/app/src/main/res/layout/activity_settings_page.xml
@@ -39,28 +39,24 @@
         android:id="@+id/themes_button_settingsPage"
         android:layout_width="167dp"
         android:layout_height="92dp"
-        android:layout_marginStart="120dp"
-        android:layout_marginTop="72dp"
-        android:layout_marginEnd="124dp"
+        android:layout_marginStart="260dp"
+        android:layout_marginLeft="260dp"
+        android:layout_marginTop="70dp"
         android:background="@drawable/wallpaper5"
         android:text="@string/themes_button"
         android:textColor="#000000"
         android:textColorLink="#9C27B0"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="120dp"
-        android:layout_marginRight="124dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/musics_button_SettingPage"
         android:layout_width="167dp"
         android:layout_height="92dp"
-        android:layout_marginStart="282dp"
-        android:layout_marginLeft="282dp"
+        android:layout_marginStart="260dp"
+        android:layout_marginLeft="260dp"
         android:layout_marginTop="41dp"
         android:background="@drawable/wallpaper8"
         app:layout_constraintStart_toStartOf="parent"
