--- a/app/src/main/res/layout/activity_theme_page.xml
+++ b/app/src/main/res/layout/activity_theme_page.xml
@@ -14,13 +14,11 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginRight="24dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginRight="40dp"
         android:background="@drawable/volumeon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
@@ -38,11 +36,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <Button
         android:id="@+id/themes_button"
         android:layout_width="159dp"
         android:layout_height="84dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginEnd="275dp"
+        android:layout_marginRight="275dp"
         android:background="@drawable/wallpaper5"
         android:duplicateParentState="false"
         android:shadowColor="#FFFFFF"
@@ -52,51 +52,55 @@
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.482"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline" />
 
     <Button
         android:id="@+id/wallpaper1_button"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_marginEnd="475dp"
+        android:layout_marginRight="475dp"
         android:background="@drawable/background3"
         android:focusableInTouchMode="false"
         android:text="@string/wallpaper1_button"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
-        app:layout_constraintEnd_toStartOf="@+id/wallpaper2_button"
-        app:layout_constraintHorizontal_bias="0.388"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline2" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline2"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/wallpaper2_button"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginTop="56dp"
-        android:layout_marginEnd="148dp"
-        android:layout_marginRight="148dp"
+        android:layout_marginEnd="125dp"
+        android:layout_marginRight="125dp"
         android:background="@drawable/back4"
-        app:layout_constraintEnd_toStartOf="@+id/wallpaper3_button"
-        app:layout_constraintTop_toBottomOf="@+id/themes_button" />
+        android:gravity="center"
+        app:layout_constraintBottom_toTopOf="@+id/guideline4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline2"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/wallpaper3_button"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginEnd="68dp"
+        android:layout_marginEnd="300dp"
+        android:layout_marginRight="300dp"
         android:background="@drawable/back5"
+        android:gravity="center_horizontal"
         android:text="@string/wallpaper3_button"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline2" />
+        app:layout_constraintTop_toTopOf="@+id/guideline2"
+        app:layout_constraintVertical_bias="0.0" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="20dp"
+        app:layout_constraintGuide_begin="165dp"
         app:layout_constraintGuide_percent="0.03" />
 
 
