--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -123,11 +123,12 @@
         android:id="@+id/avatarH"
         android:layout_width="65dp"
         android:layout_height="53dp"
+        android:background="@drawable/batman"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.05"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.35"
-        app:srcCompat="@drawable/batman" />
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
