--- a/app/src/main/res/layout/activity_level3_page.xml
+++ b/app/src/main/res/layout/activity_level3_page.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/background3"
-    tools:context=".Level1Page">
+    tools:context=".Level4Page">
 
     <Button
         android:id="@+id/settings"
@@ -50,7 +50,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="16dp"
-        android:background="@drawable/adsiz"
+        android:background="@drawable/adsız3"
         app:columnCount="4"
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
@@ -76,8 +76,8 @@
             android:layout_height="70dp"
             android:contentDescription="@string/honey"
             app:layout_column="3"
-            app:layout_row="0"
-            app:srcCompat="@drawable/honeycombs" />
+            app:layout_row="2"
+            app:srcCompat="@drawable/flower" />
     </androidx.gridlayout.widget.GridLayout>
 
     <LinearLayout
