--- a/app/src/main/res/layout/activity_level4_page.xml
+++ b/app/src/main/res/layout/activity_level4_page.xml
@@ -71,7 +71,7 @@
             app:srcCompat="@drawable/bee" />
 
         <ImageView
-            android:id="@+id/honey"
+            android:id="@+id/flower"
             android:layout_width="75dp"
             android:layout_height="70dp"
             android:contentDescription="@string/honey"
