--- a/app/src/main/res/layout/activity_level2_page.xml
+++ b/app/src/main/res/layout/activity_level2_page.xml
@@ -43,6 +43,26 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
+    <Button
+        android:id="@+id/showCode_button"
+
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+
+        android:background="@drawable/buttonshape"
+        android:shadowColor="#5A8A60"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="5"
+        android:text="Show code"
+        android:textColor="#121111"
+        android:textSize="10sp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline"
+        app:layout_constraintEnd_toStartOf="@+id/info"
+        app:layout_constraintStart_toEndOf="@+id/movements"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.937" />
+
     <LinearLayout
         android:id="@+id/linearLayout3"
         android:layout_width="150dp"
@@ -204,10 +224,10 @@
         android:text="@string/Movements"
         app:layout_constraintBottom_toTopOf="@id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.499"
+        app:layout_constraintHorizontal_bias="0.436"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.03" />
 
     <FrameLayout
         android:id="@+id/frame"
