--- a/app/src/main/res/layout/activity_play_page.xml
+++ b/app/src/main/res/layout/activity_play_page.xml
@@ -128,6 +128,5 @@
         app:layout_constraintHorizontal_bias="0.05"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.35"
-        app:srcCompat="@drawable/joker" />
+        app:layout_constraintVertical_bias="0.35" />
 </androidx.constraintlayout.widget.ConstraintLayout>
