the graph is added to achievements page

--- a/app/src/main/res/layout/activity_achievements_page.xml
+++ b/app/src/main/res/layout/activity_achievements_page.xml
@@ -23,8 +23,7 @@
         android:id="@+id/achievementsPage_voice_button"
         android:layout_width="45dp"
         android:layout_height="45dp"
-        android:layout_marginEnd="46dp"
-        android:layout_marginRight="46dp"
+        android:layout_marginEnd="48dp"
         android:background="@drawable/volumeon"
         android:text=""
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,48 +40,52 @@
         android:id="@+id/userName"
         android:layout_width="88dp"
         android:layout_height="29dp"
-        android:layout_marginStart="296dp"
-        android:layout_marginLeft="296dp"
-        android:layout_marginEnd="347dp"
-        android:layout_marginRight="347dp"
+        android:layout_marginStart="211dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="28dp"
+        android:layout_marginBottom="362dp"
         android:text="TextView"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/user"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/user" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/user"
         android:layout_width="64dp"
-        android:layout_height="61dp"
-        android:layout_marginStart="312dp"
-        android:layout_marginLeft="312dp"
-        android:layout_marginEnd="355dp"
-        android:layout_marginRight="355dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="355dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="340dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/batman" />
 
     <com.softmoore.android.graphlib.GraphView
         android:id="@+id/graph_view"
-        android:layout_width="680dp"
-        android:layout_height="192dp"
-        android:layout_marginStart="wrap_content"
-        android:layout_marginBottom="87dp"
+        android:layout_width="727dp"
+        android:layout_height="234dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/graph_view_label" />
+        app:layout_constraintTop_toBottomOf="@+id/graphAchievements_label"
+        app:layout_constraintVertical_bias="0.492" />
 
     <TextView
-        android:id="@+id/graph_view_label"
-        android:layout_width="269dp"
-        android:layout_height="42dp"
+        android:id="@+id/graphAchievements_label"
+        android:layout_width="290dp"
+        android:layout_height="26dp"
         android:layout_marginStart="210dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="252dp"
         android:gravity="center_horizontal"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/userName" />
 </androidx.constraintlayout.widget.ConstraintLayout>
