--- a/app/src/main/res/layout/activity_achievements_page.xml
+++ b/app/src/main/res/layout/activity_achievements_page.xml
@@ -29,6 +29,27 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline7" />
 
+    <Button
+        android:id="@+id/button_wipeData"
+
+        android:layout_width="133dp"
+        android:layout_height="28dp"
+
+        android:layout_marginStart="48dp"
+        android:layout_marginEnd="50dp"
+        android:background="@drawable/button_design"
+        android:shadowColor="#A8A8A8"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="5"
+        android:text="Wipe Data"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/graphAchievements_label"
+        app:layout_constraintTop_toBottomOf="@+id/achievementsPage_voice_button" />
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline7"
         android:layout_width="wrap_content"
@@ -58,7 +79,7 @@
         android:layout_marginTop="4dp"
         android:layout_marginEnd="340dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.25"
+        app:layout_constraintHorizontal_bias="0.321"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/batman" />
