--- a/app/src/main/res/layout/activity_level3_page.xml
+++ b/app/src/main/res/layout/activity_level3_page.xml
@@ -97,7 +97,16 @@
             android:contentDescription="@string/honey"
             app:layout_column="3"
             app:layout_row="2"
-            app:srcCompat="@drawable/flower" />
+            app:srcCompat="@drawable/flowerr" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=" 1"
+            android:textSize="30sp"
+            app:layout_column="3"
+            app:layout_row="2" />
     </androidx.gridlayout.widget.GridLayout>
 
     <LinearLayout
