--- a/app/src/main/res/layout/activity_level3_page.xml
+++ b/app/src/main/res/layout/activity_level3_page.xml
@@ -104,6 +104,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=" 1"
+            android:textStyle="bold"
             android:textSize="30sp"
             app:layout_column="3"
             app:layout_row="2" />
