--- a/app/src/main/res/layout/activity_level6_page.xml
+++ b/app/src/main/res/layout/activity_level6_page.xml
@@ -95,7 +95,7 @@
             android:contentDescription="@string/honey"
             app:layout_column="2"
             app:layout_row="1"
-            app:srcCompat="@drawable/yellowflower2" />
+            app:srcCompat="@drawable/flowerr" />
 
         <ImageView
             android:id="@+id/flower3"
@@ -104,7 +104,7 @@
             android:contentDescription="@string/honey"
             app:layout_column="1"
             app:layout_row="2"
-            app:srcCompat="@drawable/flower3" />
+            app:srcCompat="@drawable/pinkflowerr" />
 
         <ImageView
             android:id="@+id/flower8"
@@ -114,6 +114,26 @@
             app:layout_column="4"
             app:layout_row="3"
             app:srcCompat="@drawable/honeycombs" />
+
+        <TextView
+            android:id="@+id/level6yellow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=" 2"
+            android:textStyle="bold"
+            android:textSize="30sp"
+            app:layout_column="2"
+            app:layout_row="1" />
+
+        <TextView
+            android:id="@+id/level6pink"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=" 3"
+            android:textStyle="bold"
+            android:textSize="30sp"
+            app:layout_column="1"
+            app:layout_row="2" />
     </androidx.gridlayout.widget.GridLayout>
 
     <LinearLayout
